package RemoteWithSlots.command;

public class NoCommand implements Command {
    public void execute() {
    }
}
