package RemoteWithSlots.command.ceilingFan;

import RemoteWithSlots.command.Command;
import RemoteWithSlots.receiver.CeilingFan;

public class CeilingFanOnCommand implements Command {
    CeilingFan ceilingFan;

    public CeilingFanOnCommand(CeilingFan ceilingFan) {
        this.ceilingFan = ceilingFan;
    }

    public void execute() {
        ceilingFan.high();
    }
}
