package RemoteWithSlots.command.stereo;

import RemoteWithSlots.command.Command;
import RemoteWithSlots.receiver.Stereo;

public class StereoOffCommand implements Command {
    Stereo stereo;

    public StereoOffCommand(Stereo stereo) {
        this.stereo = stereo;
    }

    public void execute() {
        stereo.off();
    }
}
