' Generated by UML Generator
' Encoded: fLR1Rfj04Btp5Ni4jKHfUqDgbDRKYIMdhc8bFbGzR65ihmex5hiaLTFasxk0MNRnak3qv7ZcpNjlXXcSSo5f8SiyyyGlndUqe3b9CYh49oaBzhEKC4kGBzaV8AVUbgL04bOa6NXUZIBNaAE4ET8K2lBW4VBcGJ5AbZoId3Bkqs8Z8h9KN7pp_KSGaJjagVTebq-GomApklu9-GJpdF9KrUt_giFhjIiUXfMcHUC7LKY0tADyaQ6C2EFoBT7acaF5DBCEjZuL3_BFfPJ8LrHyAyKM33eJjLwFWKbi9k47xKowKSpPPYkR4MIOg14Yrw2spnhZzzD1uzEt_VW7mvu0onHyIdaj4xfazDExd5rSrlR9H_B1obnzYMStLstklPMRBrPjufsLM4odRUAqIeWTG5f7T7ETFNU7MzMysMCEAIjpCvBX_T0GrDSDo6MbMiKgNJsNfOG2y8NHDw1ZPxzVnBWNY6_xaMkQCkp5RZ4hS_3lwWzhbRJr2tMm6uWHYnViTq1t2-NE54_ntcf9IBJoMRM72tuOSgrTCxc5lhB6gQYZqJxR6tC7zcrSxHL-Gw9UJ8DAVCNaTX8V8MTNZDHKpmEADKs0c4h3xhhzxiyYqPd8G3aEmvYBkoOOwu2_qW3_7_slE6vIysQzB8lrVaLDoduVTfvCJ312eVSOdf7evZvUepkvM9sJfRJHgSY0EOxLgFJTHMCztEnUvq3N7Qbl_x9Z6EeVxOFtmSd9txFXR1YUjLVhlczNUGzYS3YlqA9m8Ye6up9SbpH4mWSukckmAdlB_rok8cosjR_FZYgxbwRClQ9MiHjIKHXhurgp0POEqECu1vwg_qF_0G
' URL: http://www.plantuml.com/plantuml/uml/fLR1Rfj04Btp5Ni4jKHfUqDgbDRKYIMdhc8bFbGzR65ihmex5hiaLTFasxk0MNRnak3qv7ZcpNjlXXcSSo5f8SiyyyGlndUqe3b9CYh49oaBzhEKC4kGBzaV8AVUbgL04bOa6NXUZIBNaAE4ET8K2lBW4VBcGJ5AbZoId3Bkqs8Z8h9KN7pp_KSGaJjagVTebq-GomApklu9-GJpdF9KrUt_giFhjIiUXfMcHUC7LKY0tADyaQ6C2EFoBT7acaF5DBCEjZuL3_BFfPJ8LrHyAyKM33eJjLwFWKbi9k47xKowKSpPPYkR4MIOg14Yrw2spnhZzzD1uzEt_VW7mvu0onHyIdaj4xfazDExd5rSrlR9H_B1obnzYMStLstklPMRBrPjufsLM4odRUAqIeWTG5f7T7ETFNU7MzMysMCEAIjpCvBX_T0GrDSDo6MbMiKgNJsNfOG2y8NHDw1ZPxzVnBWNY6_xaMkQCkp5RZ4hS_3lwWzhbRJr2tMm6uWHYnViTq1t2-NE54_ntcf9IBJoMRM72tuOSgrTCxc5lhB6gQYZqJxR6tC7zcrSxHL-Gw9UJ8DAVCNaTX8V8MTNZDHKpmEADKs0c4h3xhhzxiyYqPd8G3aEmvYBkoOOwu2_qW3_7_slE6vIysQzB8lrVaLDoduVTfvCJ312eVSOdf7evZvUepkvM9sJfRJHgSY0EOxLgFJTHMCztEnUvq3N7Qbl_x9Z6EeVxOFtmSd9txFXR1YUjLVhlczNUGzYS3YlqA9m8Ye6up9SbpH4mWSukckmAdlB_rok8cosjR_FZYgxbwRClQ9MiHjIKHXhurgp0POEqECu1vwg_qF_0G
' Generated on: 2025-12-10T00:50:21.426642

@startuml
skinparam classAttributeIconSize 0
hide circle

class RemoteLoader {
  +{static} main(args: String[]): void
}

class RemoteControl {
  ~onCommands: Command
  ~offCommands: Command
  --
  +RemoteControl()
  +setCommand(slot: int, onCommand: Command, offCommand: Command): void
  +onButtonWasPushed(slot: int): void
  +offButtonWasPushed(slot: int): void
  +toString(): String
}

class Light {
  ~location: String
  --
  +Light(location: String)
  +on(): void
  +off(): void
}

class CeilingFan {
  -location: String
  -{static} HIGH: int = 3
  -{static} MEDIUM: int = 2
  -{static} LOW: int = 1
  -{static} OFF: int = 0
  -speed: int
  --
  +CeilingFan(location: String)
  +high(): void
  +medium(): void
  +low(): void
  +off(): void
  +getSpeed(): int
}

class Stereo {
  ~location: String
  --
  +Stereo(location: String)
  +on(): void
  +off(): void
  +setCD(): void
  +setDVD(): void
  +setRadio(): void
  +setVolume(volume: int): void
}

class GarageDoor {
  ~location: String
  --
  +GarageDoor(location: String)
  +up(): void
  +down(): void
  +stop(): void
  +lightOn(): void
  +lightOff(): void
}

class StereoOffCommand {
  ~stereo: Stereo
  --
  +StereoOffCommand(stereo: Stereo)
  +execute(): void
}

class StereoOnWithCDCommand {
  ~stereo: Stereo
  --
  +StereoOnWithCDCommand(stereo: Stereo)
  +execute(): void
}

interface Command {
  +execute(): void
}

class CeilingFanOffCommand {
  ~ceilingFan: CeilingFan
  --
  +CeilingFanOffCommand(ceilingFan: CeilingFan)
  +execute(): void
}

class CeilingFanOnCommand {
  ~ceilingFan: CeilingFan
  --
  +CeilingFanOnCommand(ceilingFan: CeilingFan)
  +execute(): void
}

class NoCommand {
  +execute(): void
}

class LightOnCommand {
  ~light: Light
  --
  +LightOnCommand(light: Light)
  +execute(): void
}

class LightOffCommand {
  ~light: Light
  --
  +LightOffCommand(light: Light)
  +execute(): void
}

class GarageDoorDownCommand {
  ~garageDoor: GarageDoor
  --
  +GarageDoorDownCommand(garageDoor: GarageDoor)
  +execute(): void
}

class GarageDoorUpCommand {
  ~garageDoor: GarageDoor
  --
  +GarageDoorUpCommand(garageDoor: GarageDoor)
  +execute(): void
}

RemoteControl o-- Command
StereoOffCommand ..|> Command
StereoOffCommand --> Stereo
StereoOnWithCDCommand ..|> Command
StereoOnWithCDCommand --> Stereo
CeilingFanOffCommand ..|> Command
CeilingFanOffCommand --> CeilingFan
CeilingFanOnCommand ..|> Command
CeilingFanOnCommand --> CeilingFan
NoCommand ..|> Command
LightOnCommand ..|> Command
LightOnCommand --> Light
LightOffCommand ..|> Command
LightOffCommand --> Light
GarageDoorDownCommand ..|> Command
GarageDoorDownCommand --> GarageDoor
GarageDoorUpCommand ..|> Command
GarageDoorUpCommand --> GarageDoor
@enduml